--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,3 @@
-
-
-/*
-Author: XpeedStudio
-Author URI: http://themeforest.net/user/XpeedStudio/portfolio
-*/
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
 html,
 body {
     font-size: 15px;
@@ -589,7 +580,7 @@ textarea::-ms-input-placeholder
 
 /*For Home Section*/
 .home{
-    background:url(https://i.gifer.com/RjtR.gif) no-repeat center center;
+    background:url(https://i.gifer.com/AvTp.gif) no-repeat center center;
     color:#000;
 	background-size:cover;
 	-webkit-background-size:cover;
@@ -602,10 +593,10 @@ textarea::-ms-input-placeholder
     overflow:hidden;
 }
 .home-content h1{
-    font-size:48px;
+    font-size:54px;
     font-weight:700;
     margin-bottom: 30px;
-    color: #fff;
+    color: #000000;
 }
 .home-content p{
     margin-bottom: 30px;
