--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,7 @@ input[type="color"],
     height: 45px;
 }
 .form-control:focus {
-    border-color: #82ca9c;
+    border-color: rgb(21, 43, 165);
 }
 
 h1,
@@ -341,7 +341,7 @@ Button
 
 .btn-default {
     border-radius: 0px;
-    background: #82ca9c;
+    background: rgb(60, 82, 207);
     color: #ededed;
     border: 0;
     padding: 12px 15px;
@@ -350,7 +350,7 @@ Button
 }
 .btn-default:hover, .btn-default:focus, .btn-default.focus, .btn-default:active, .btn-default.active, .open>.dropdown-toggle.btn-default {
     color: #fff;
-    background-color: rgba(0, 173, 62, 0.75);
+    background-color: rgb(21, 43, 165);
     border-color:transparent;
 }
 
@@ -367,7 +367,7 @@ Button
     font-size: 18px;
     line-height: 26px;
     border-radius:0;
-    background: #82ca9c;
+    background: rgb(21, 43, 165);
     border: 0;
     padding: 10px 25px;
 }
@@ -514,7 +514,7 @@ textarea::-ms-input-placeholder
     color:#fff;
 }
 .social-wrapper .social-icon a:hover{
-    color:#82ca9c;
+    color:rgb(21, 43, 165);
 }
 .social-wrapper .social-icon a i{
     padding-right:10px;
@@ -528,7 +528,7 @@ textarea::-ms-input-placeholder
     margin-right:20px;
 }
 .social-wrapper .social-contact a:hover{
-    color:#82ca9c;
+    color:rgb(21, 43, 165);
 }
 .social-wrapper .social-contact a i{
     padding-right:5px;
@@ -542,7 +542,7 @@ textarea::-ms-input-placeholder
     padding-top:20px;
 }
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
-    color: #82ca9c;
+    color: rgb(60, 82, 207);
     background-color:transparent;
 }
 .navbar-default .navbar-nav>li>a {
@@ -552,11 +552,11 @@ textarea::-ms-input-placeholder
 	text-transform:uppercase;
 }
 .navbar-default .navbar-nav li a :hover{
-    color: #82ca9c;
+    color: rgb(60, 82, 207);
 }
 .navbar-default .collapse .login a{
-    color: #82ca9c;
-    border: 1px solid #82ca9c;
+    color: rgb(60, 82, 207);
+    border: 1px solid rgb(60, 82, 207);
     border-radius: 20px;
     padding: 4px 30px;
     font-size: 12px;
@@ -566,11 +566,11 @@ textarea::-ms-input-placeholder
     overflow:hidden;
 }
 .navbar-default .collapse .login:hover a{
-    background-color: rgba(0, 173, 62, 0.75);
+    background-color: rgb(60, 82, 207);
     color:#fff;
 }
 .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
-    color: #82ca9c;
+    color: rgb(60, 82, 207);
     background-color: transparent;
 }
 .navbar-brand{
@@ -617,12 +617,12 @@ textarea::-ms-input-placeholder
 
 }
 .home-content .home-contact input[type="text"]{
-    color:#82ca9c;
+    color:#3c52cf;
 }
 .home-content .home-contact input[type="submit"]{
     display:inline-block;
     width:35%;
-    background:#82ca9c;
+    background:#3c52cf;
     color:#fff;
 	border: 0px;
 }
@@ -759,7 +759,7 @@ textarea::-ms-input-placeholder
     position: relative;
     padding: 2px;
     border-radius: 50em;
-    background:#82ca9c;
+    background:rgb(21, 43, 165);
 }
 .cd-pricing-switcher input[type="radio"] {
     position: absolute;
@@ -1026,7 +1026,7 @@ textarea::-ms-input-placeholder
     padding: 1em;
     pointer-events: none;
     color: #FFFFFF;
-    border:1px solid #82ca9c;
+    border:1px solid rgb(21, 43, 165);
 }
 .cd-pricing-header h2 {
     margin-bottom: 3px;
@@ -1047,7 +1047,7 @@ textarea::-ms-input-placeholder
     }
     .cd-popular .cd-pricing-header {
         color:#fff;
-        background:#82ca9c;
+        background:rgb(21, 43, 165);
     }
     .cd-secondary-theme .cd-pricing-header {
         color: #FFFFFF;
@@ -1185,7 +1185,7 @@ textarea::-ms-input-placeholder
 
 }
 .cd-pricing-footer a {
-    background:#82ca9c;
+    background:rgb(21, 43, 165);
     color:#fff;
 }
 
@@ -1248,7 +1248,7 @@ textarea::-ms-input-placeholder
     }
     .cd-popular .cd-select {
         color: #ededed;
-        background: #82ca9c;
+        background: rgb(21, 43, 165);
     }
     .no-touch .cd-popular .cd-select:hover {
         color:#000;
@@ -1466,7 +1466,7 @@ xkeyframes
 
 
 .fa-check-circle{
-    color:#82ca9c;
+    color:rgb(21, 43, 165);
 }
 .fa-remove{
     color:red;
@@ -1497,7 +1497,7 @@ xkeyframes
     -webkit-transition:.3s ease-in-out;
 }
 .community-edition:hover{
-    background:#82ca9c;
+    background:rgb(21, 43, 165);
     color:#fff;
 }
 .community-edition:hover i {
@@ -1512,7 +1512,7 @@ xkeyframes
 
 .community-edition i{
     font-size:60px;
-    color:#82ca9c;
+    color:rgb(21, 43, 165);
     margin-bottom: 20px;
 }
 .community-edition h4{
@@ -1605,12 +1605,12 @@ xkeyframes
 
 }
 .menu-item input[type="text"]{
-    color:#82ca9c;
+    color:rgb(21, 43, 165);
 }
 .menu-item input[type="submit"]{
     display:inline-block;
     width:35%;
-    background:#82ca9c;
+    background:rgb(21, 43, 165);
     color:#fff;
 	border:0px;
 }
@@ -1664,7 +1664,7 @@ xkeyframes
 	-webkit-transition: opacity .5s, background-color .5s;
 }
 .scrollup:hover {
-	background: #82ca9c;
+	background: rgb(21, 43, 165);
 	opacity: 1;
 }
 .scrollup i {
