--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,11 +307,11 @@ Button
 .btn-primary:focus,
 .btn-primary.disabled{
     color: #ffffff;
-    background-color:#64c583;
+    background-color:rgb(60, 82, 207);
     border-color: #f56363;
 }
 .btn-primary:hover {
-    background-color:#64c583;
+    background-color:rgb(60, 82, 207);
 }
 
 .btn {
@@ -627,7 +627,7 @@ textarea::-ms-input-placeholder
 	border: 0px;
 }
 .home-content .home-contact input[type="submit"]:hover{
-	background-color: rgba(0, 173, 62, 0.75);
+	background-color: rgb(60, 82, 207);
 }
 .home-contact p{
     margin-top: 20px;
@@ -1615,7 +1615,7 @@ xkeyframes
 	border:0px;
 }
 .menu-item input[type="submit"]:hover{
-	background-color: rgba(0, 173, 62, 0.75);
+	background-color: rgb(60, 82, 207);
 }
 
 /*For Footer Section*/
